spacing fix for tags

--- a/drupal/sites/default/themes/ttctheme/src/scss/modules/_faceted_search.scss
+++ b/drupal/sites/default/themes/ttctheme/src/scss/modules/_faceted_search.scss
@@ -232,3 +232,4 @@ article.node-abstract.node-teaser {
   }
 
 }
+    .pane-current-search-current-abstract-faceted-search ul li{margin-right:10px;}
